--- a/assets/CSS/Contato.css
+++ b/assets/CSS/Contato.css
@@ -11,6 +11,14 @@ body{
   width: 100%;
   margin-bottom: 100px;
 }
+
+.banner{
+  z-index: -1;
+  position: absolute;
+  height: 90vh;
+  width: 100%;
+}
+
 .menu{
   display: flex;
   justify-content: flex-end;
@@ -77,8 +85,9 @@ body{
 }
 
 .orcamento{
-  margin-bottom: 100px;
-  background-color: black;
+  margin-bottom: 200px;
+  margin-top: 300px;
+  /* background-color: black; */
   height: 80vh;
 }
 
@@ -233,6 +242,20 @@ footer a{
 
   .menu a{
     width: 200px;
+  }
+
+}
+
+@media (max-device-width: 900px){
+  .banner{
+    height: 60vh;
+  }
+
+}
+
+@media (max-device-width: 500px){
+  .banner{
+    height: 40vh;
   }
 
 }
