--- a/assets/CSS/Produtos.css
+++ b/assets/CSS/Produtos.css
@@ -7,9 +7,16 @@ body{
     background-color: black;
 }
 
+.banner{
+  z-index: -1;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+}
+
 .conteudo{
     padding: 0 150px;
-    background-color: black;
+    /* background-color: black; */
 }
 
 .cabecalho{
@@ -75,7 +82,7 @@ body{
 }
 
 .textoProduto{
-  background-color: black;
+  /* background-color: black; */
   height: 350px;
   text-align: center;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -110,7 +117,7 @@ body{
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: black;
+  /* background-color: black; */
 }
 
 .vantagens img{
@@ -328,7 +335,6 @@ footer a{
     }
     .conteudo{
         padding: 0 50px;
-        background-color: black;
     }
   }
   
@@ -350,6 +356,20 @@ footer a{
       overflow: scroll;
       margin-bottom: 100px;
     }
+  }
+
+  @media (max-device-width: 900px){
+    .banner{
+      height: 60vh;
+    }
+
+  }
+
+  @media (max-device-width: 500px){
+    .banner{
+      height: 40vh;
+    }
+
   }
   
   
